fix(homepage): adjust spacing of card-list to accomodate margin-less headings
Refs: RWR-325

--- a/html/themes/custom/common_design_subtheme/components/hri-homepage/hri-homepage.css
+++ b/html/themes/custom/common_design_subtheme/components/hri-homepage/hri-homepage.css
@@ -8,6 +8,10 @@
   border-top: 0 none;
 }
 
+.paragraph--type--card-list .field--name-field-paragraphs {
+  margin-block-end: 1em;
+}
+
 /* Override layout rules for a wider sidebar like RW */
 @media (min-width: 1024px) {
   .path-frontpage .hri-layout--two-col > .hri-layout__sidebar {
